--- a/css/mainContent.css
+++ b/css/mainContent.css
@@ -1,6 +1,5 @@
 .main-wrapper {
-  /* min-height: calc(100vh - 96px); */
-  display: flex;
+  justify-content: flex-end;
   flex-grow: 1;
   max-width: 1920px;
   margin: 0 auto;
