--- a/css/sidebarContent.css
+++ b/css/sidebarContent.css
@@ -3,6 +3,7 @@
   max-height: calc(100vh - 96px);
   top: 96px;
   bottom: 0;
+  left: 0;
   overflow: hidden;
   box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.08);
   display: flex;
